
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_8__ TYPE_3__ ;
typedef struct TYPE_7__ TYPE_2__ ;
typedef struct TYPE_6__ TYPE_1__ ;


struct TYPE_6__ {size_t* input_layers; int out_w; scalar_t__ out_h; scalar_t__ out_c; int outputs; int* input_sizes; int n; int inputs; int batch; void* delta; void* delta_gpu; void* output; void* output_gpu; } ;
typedef TYPE_1__ route_layer ;
struct TYPE_7__ {TYPE_3__* layers; } ;
typedef TYPE_2__ network ;
struct TYPE_8__ {int out_w; scalar_t__ out_h; scalar_t__ out_c; int outputs; } ;
typedef TYPE_3__ layer ;


 int cuda_free (void*) ;
 void* cuda_make_array (void*,int) ;
 int printf (char*,int,scalar_t__,int,scalar_t__) ;
 void* realloc (void*,int) ;

void resize_route_layer(route_layer *l, network *net)
{
    int i;
    layer first = net->layers[l->input_layers[0]];
    l->out_w = first.out_w;
    l->out_h = first.out_h;
    l->out_c = first.out_c;
    l->outputs = first.outputs;
    l->input_sizes[0] = first.outputs;
    for(i = 1; i < l->n; ++i){
        int index = l->input_layers[i];
        layer next = net->layers[index];
        l->outputs += next.outputs;
        l->input_sizes[i] = next.outputs;
        if(next.out_w == first.out_w && next.out_h == first.out_h){
            l->out_c += next.out_c;
        }else{
            printf("%d %d, %d %d\n", next.out_w, next.out_h, first.out_w, first.out_h);
            l->out_h = l->out_w = l->out_c = 0;
        }
    }
    l->inputs = l->outputs;
    l->delta = realloc(l->delta, l->outputs*l->batch*sizeof(float));
    l->output = realloc(l->output, l->outputs*l->batch*sizeof(float));
}
